Fix position of contact form on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,6 +388,8 @@ p {
     /*contact form media query*/
     .contact {
         font-size: large;
+        bottom: 150px;
+        top: 150px;
     }
     
     .text-input {
